beams pergolas and so forth, in process (just need custom wood_set textures)